# ubaith444-OrbitOps-Multi-Agent-Business-Automation-Platform

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
agents/: README.md
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/app/: __init__.py  main.py  models.py  schemas.py  worker.py
apps/api/app/agents/: __init__.py  communication.py  graph.py  llm_router.py  nodes.py  state.py
apps/api/app/api/: ai_operations.py  communications.py  dependencies.py  routes.py
apps/api/app/core/: config.py  database.py  security.py  telemetry.py
apps/api/app/services/: audit.py  communications.py  evaluations.py  orchestration.py  reports.py  state_store.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0001_initial.py  0002_immutable_audit.py  0003_p1_approval_status.py  0004_communication_delivery.py  0005_ai_operations.py
apps/api/tests/: conftest.py  test_agents.py  test_ai_operations.py  test_communications.py  test_p1.py  test_reports.py  test_security.py  test_vertical_slice.py
docker/: README.md
docs/: README.md  api.md  architecture.md  database-schema.md  deployment.md  development-roadmap.md  environment.md  frontend-and-wireframes.md  langgraph-workflow.md  n8n-workflows.md  portfolio-kit.md  portfolio.md  rbac-matrix.md  testing-report.md  testing-strategy.md
n8n/: lead-intake.workflow.json
scripts/: build_portfolio_gifs.py  check_secrets.py
tests/: README.md
(+61 files in other folders)
