[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orbitops-api"
version = "0.1.0a0"
description = "Multi-agent business automation API"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "sqlalchemy[asyncio]>=2.0,<3",
  "asyncpg>=0.29,<1",
  "aiosqlite>=0.20,<1",
  "alembic>=1.13,<2",
  "pydantic-settings>=2.4,<3",
  "pyjwt[crypto]>=2.9,<3",
  "pwdlib[argon2]>=0.2,<1",
  "redis>=5,<6",
  "httpx>=0.27,<1",
  "langgraph>=0.2,<1",
  "langchain-core>=0.3,<1",
  "structlog>=24,<26",
  "prometheus-client>=0.20,<1",
  "email-validator>=2.2,<3",
  "reportlab>=4.2,<5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-asyncio>=0.24,<1",
  "pytest-cov>=5,<7",
  "ruff>=0.7,<1",
  "mypy>=1.13,<2",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
ignore = ["B008"]
